WIP. Initial docs clarifications.
[#156264203]

Signed-off-by: Michal Kuratczyk <mkuratczyk@pivotal.io>

--- a/install-config-pp.html.md.erb
+++ b/install-config-pp.html.md.erb
@@ -93,8 +93,7 @@ To configure the following sections in the **RabbitMQ** tab, in the [Settings](#
 
 ### <a id='dash'></a>RabbitMQ Admin User Credentials
 
-Enter an admin username and password for RabbitMQ.
-This grants you full admin access to the RabbitMQ Management UI.
+The admin username and password for RabbitMQ grant full admin access to the RabbitMQ Management UI.
 
 Enter the desired credentials in this section of the RabbitMQ tab:
 
