--- a/install-config.html.md.erb
+++ b/install-config.html.md.erb
@@ -43,7 +43,7 @@ Configure the following tabs for the on-demand service:
   </tr>
   <tr><td>Assign AZs and Networks</td><td><a href="#azs-networks">Configure AZs and Networks</a></td>
   </tr>
-  <tr><td>RabbitMQ</td><td>Set the Metrics polling interval only. See <a href="./monitor.html#metrics">What Are Metrics</a>.</td>
+  <tr><td>RabbitMQ</td><td>Configure multitenant RabbitMQ service. See <a href="./monitor.html#metrics">What Are Metrics</a>.</td>
   </tr>
   <tr><td>Syslog</td><td><a href="./monitor.html#config">Set up Syslog Forwarding</a></td>
   </tr>
